# image-search

./: .gitattributes  .gitignore  CHANGELOG.md  Makefile  README.md  entrypoint.sh  run_app.py  setup.cfg  setup.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: 01_BUG_REPORT.md
binaries/: collection.pkl  images_handler.pkl  lexicon.pkl
data/: captions.tsv  captions_0.1.tsv  corpus.txt  data_sampler.ipynb
data/dumps/: collection.pkl  lexicon.pkl
docs/: CONTRIBUTING.md
notebooks/: analysis.ipynb  data_analysis.ipynb  data_preprocessor.ipynb  data_sampler.ipynb  dict_multiprocessing.ipynb  fasttext_embeddings.ipynb  fasttext_models_check.ipynb  grams.ipynb  supervised_models_check.ipynb  unsupervised_models_check.ipynb
scripts/: data_preprocessing.py  data_sampler.py  fasttext_learning.py  progress.py  version.py  version_maker.py
scripts/semantic_learning/: fasttext_learning.py  fasttext_supervised_training.py  fasttext_unsupervised_training.py
semantic_learning/: fasttext_supervised_training.py  fasttext_unsupervised_training.py  supervised_data_preprocessor.ipynb  supervised_models_check.ipynb  supervised_preprocessing.py  supervised_preprocessor.py  supervised_training.py  unsupervised_data_preprocessor.ipynb  unsupervised_models_check.ipynb  unsupervised_preprocessing.py  unsupervised_preprocessor.py
server/: flask_server.py  streamlit_attempt.py
server/static/: scripts.js  scripts_.js
server/templates/: index.html  index_.html  query.html
src/image_search/: app_cli.py  app_init.py  app_web.py  context.py
src/typing_assistant/: app_cli.py  (+11 more)
(+40 files in other folders)
