[project]
name = typing-assistant
description = Typing Assistant
service_name = typing-assistant
version = 0.0.0

[github]
repository_url = https://github.com/jarvis0/typing-assistant

[flake8]
ignore = 
	E501,
	N802,
	N806,
	N803,
	N812,
	T000,
	A003,
	T484,
max-line-length = 100
jobs = 8
count = True
application_import_names = src
exclude = 
	__pycache__,
	.dockerignore,
	.env,
	.git,
	.gitignore,
	.gitlab,
	.gitmodules,
	.python-version,
	.vscode,
	*.pyc,
	CHANGELOG.md,
	CONTRIBUTING.md,
	docker-compose.yml
	README.md,
	requirements,
	requirements.txt,
	scripts,
	setup.cfg
